update running instructions for v6